# SOTR

class1/: LinuxRTServicesBaseSW.tar.xz  Makefile  a.out  periodicTaskRT.c  ptrt
project1/: CAB.c  Makefile  README.md  a.out  cab.c  cab.h  imageViewer  imageViewer.c  myProgram  processing.c  rtdb.c  schec.c  threads.c  webCamCapture  webCamCapture.c  webCamImageAckProc_1.0.tar.xz
project1/include/: cab.h  processing.h  rtdb.h  sched.h  threads.h  webCamCapture.h
project1/test_files/: testCab.c  testRTDB.c
project2/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
project2/src/: Makefile  main.c  rtdb.c  rtdb.h  testUart.c  uart_interface.c
project2/src/include/: uart_interface.h
project2/src/rtdb/: rtdb.c  rtdb.h
project2/src/uart/: uart.c  uart.h
